testing/examples/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: test-gateway
  namespace: default
spec:
  gatewayClassName: test-gatewayclass
  listeners:
  - name: http
    protocol: HTTP
    port: 80
